FIX - window.onresize causing issue on youtube video fullscreen and buttons label issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,6 @@ h1 {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
-.button:hover span {
-  opacity: 1;
-}
-
 .button.black {
   background-color: white;
 }
@@ -63,7 +59,11 @@ h1 {
   font-size: .8em;
   white-space: nowrap;
   opacity: 0;
-  transition: opacity ease 350ms;
+  transition: opacity ease-in-out 200ms;
+}
+
+.button:active span {
+  opacity: 1;
 }
 
 .add-to-theme:disabled {
@@ -131,7 +131,7 @@ nav .main {
 }
 
 .mobile.warning {
-  position: absolute;
+  position: fixed;
   text-transform: uppercase;
   font-size: 1.6em;
   background-color: white;
